[package]
name = "rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.58"
zip = "0.6.2"
guard = { path = "C:\\src\\guard" }
regex = "1.6.0"
enum-iterator = "1.1.3"